@@ -2,10 +2,8 @@
 
 cd `dirname $0`
 
-JAVA_VER=`java -version 2>&1 | awk -F "[ \"]" '/version/{print $4}'`
-if [[ $JAVA_VER > 1.9 ]] || [[ $JAVA_VER > 10 ]]; then
 JVM="\
--Xms512m \
+-Xms128m \
 -Xmx512m \
 -server \
 -XX:+UseG1GC \
@@ -16,41 +14,8 @@ JVM="\
 -Xlog:gc=info,gc+heap=info:log/gc.log:time \
 -Dsun.stdout.encoding=utf-8 \
 -Dsun.stderr.encoding=utf-8"
-else
-JVM="\
--Xms512m \
--Xmx512m \
--server \
--XX:+UseConcMarkSweepGC \
--XX:+AggressiveOpts \
--XX:AutoBoxCacheMax=65535 \
--XX:SoftRefLRUPolicyMSPerMB=1000 \
--XX:+HeapDumpOnOutOfMemoryError \
--Xloggc:log/gc.log \
--XX:+PrintGCDetails \
--XX:+PrintGCDateStamps \
--XX:+PrintReferenceGC \
--verbose:gc \
--Dsun.stdout.encoding=utf-8 \
--Dsun.stderr.encoding=utf-8"
-fi
-
-# -Djava.rmi.server.hostname=127.0.0.1 \
-# -Djava.net.preferIPv4Stack=true \
-# -Dcom.sun.management.jmxremote.port=1100 \
-# -Dcom.sun.management.jmxremote.rmi.port=1099 \
-# -Dcom.sun.management.jmxremote.ssl=false \
-# -Dcom.sun.management.jmxremote.local.only=false \
-# -Dcom.sun.management.jmxremote.authenticate=true \
-# -Dcom.sun.management.jmxremote.password.file=jmxremote.password \
-# -Dcom.sun.management.jmxremote.access.file=jmxremote.access"
-
-# -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=1234
 
 LIB="\
-lib/slf4j-api-1.7.32.jar:\
-lib/logback-core-1.2.6.jar:\
-lib/logback-classic-1.2.6.jar:\
 jane-core.jar:\
 jane-test.jar"
 
@@ -70,7 +35,5 @@ fi
 mkdir -p log 2> /dev/null
 mkdir -p db  2> /dev/null
 
-mv -f log/gc.log log/gc.old.log 2> /dev/null
-
 if [ -z $NOHUP ]; then java $JVM -cp $LIB:. $MAIN ${@:2:9}
-else             nohup java $JVM -cp $LIB:. $MAIN removeAppender=ASYNC_STDOUT ${@:3:9} 1>> log/stdout.log 2>> log/stderr.log & fi
+else             nohup java $JVM -cp $LIB:. -Dtinylog.writerConsole.level=off $MAIN ${@:3:9} 1>> log/stdout.log 2>> log/stderr.log & fi
